--- a/Helloworld.ipynb
+++ b/Helloworld.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 52,
    "id": "e47e1d1c",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 53,
    "id": "a875325b",
    "metadata": {},
    "outputs": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 54,
    "id": "c8aaf6e2",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "6f13b7a0",
    "metadata": {},
    "outputs": [
@@ -63,17 +63,6 @@
       "hellohello\n",
       "3.3333333333333335\n"
      ]
-    },
-    {
-     "ename": "ZeroDivisionError",
-     "evalue": "division by zero",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mZeroDivisionError\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[36]\u001b[39m\u001b[32m, line 8\u001b[39m\n\u001b[32m      6\u001b[39m \u001b[38;5;66;03m# divide /\u001b[39;00m\n\u001b[32m      7\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[32m10.0\u001b[39m / \u001b[32m3.0\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[32;43m10\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m/\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m0\u001b[39;49m)\n",
-      "\u001b[31mZeroDivisionError\u001b[39m: division by zero"
-     ]
     }
    ],
    "source": [
@@ -84,8 +73,66 @@
     "\n",
     "# divide /\n",
     "print(10 / 3) # integer division //\n",
-    "# print(10 / 0) # division by zero\n",
-    "\n"
+    "# print(10 / 0) # division by zero\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bceec062",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n",
+      "<class 'float'>\n",
+      "<class 'str'>\n",
+      "<class 'bool'>\n",
+      "age23\n",
+      "age True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Java has 8 primitive\n",
+    "# Python\n",
+    "y = 3\n",
+    "print(type(y))\n",
+    "y = 3.4\n",
+    "print(type(y))\n",
+    "y = \"bootcamp\"\n",
+    "print(type(y))\n",
+    "y = True\n",
+    "print(type(y))\n",
+    "\n",
+    "\n",
+    "print(\"age\" + str(23))\n",
+    "print(\"age\", str(True)) # print with space"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b3041ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = \"Jennie\"\n",
+    "age = 27\n",
+    "print(f\"The student is {name}, and the age is {age}.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a4c8eaa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Case sensitive?\n",
+    "# Pyhton: String type and Dynamic"
    ]
   }
  ],
